# surrealdb-simple-migration

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  tasks.todo
src/: lib.rs  main.rs
