[package]
categories = ["database"]
description = "Simple yet powerful database migration tool for SurrealDB"
edition = "2021"
homepage = "https://github.com/hpapier/surrealdb-simple-migration.git"
keywords = ["surrealdb", "migration", "database"]
license = "MIT OR Apache-2.0"
name = "surrealdb-simple-migration"
repository = "https://github.com/hpapier/surrealdb-simple-migration.git"
readme = "README.md"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ssm"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
regex = "1.10.4"
serde = "1.0.203"
surrealdb = "1.5.1"
tokio = { version = "1.37.0", features = ["full"] }
