[package]
categories = ["database"]
description = "Simple yet powerful database migration tool for SurrealDB"
edition = "2021"
homepage = "https://github.com/hpapier/surrealdb-simple-migration.git"
keywords = ["surrealdb", "migration", "database"]
license = "MIT OR Apache-2.0"
name = "surrealdb-simple-migration"
repository = "https://github.com/hpapier/surrealdb-simple-migration.git"
readme = "README.md"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ssm"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.3"
serde = "1.0.228"
surrealdb = "3.0.5"
surrealdb-types = "3.0.5"
tokio = { version = "1.52.1", features = ["full"] }
